# src/DTO/Internal/TOBUY/DeleteTODO.cs
@@ -1,0 +1,14 @@
+﻿using System;
+using Domain.Interfaces;
+using DTO.Public.TOBUY;
+using MicroDocum.Themes.DefaultTheme.Attributes;
+using MicroDocum.Themes.DefaultTheme.Interfaces;
+
+namespace DTO.Internal.TOBUY
+{
+    [ServiceName("TOBUYSrv")]
+    public class DeleteTOBUY : IPublicIdEntity, IProduce<DeleteTOBUYResponse>
+    {
+        public Guid PublicId { get; set; }
+    }
+}
