# src/Domain/Models/Price.cs
@@ -1,0 +1,10 @@
+using Domain.Enums;
+
+namespace Domain.Models
+{
+    public class Price
+    {
+        public decimal Amount { get; set; }
+        public Currency Currency { get; set; }
+    }
+}
